[gd_scene load_steps=5 format=3 uid="uid://b0sacipy8qxym"]

[ext_resource type="Script" uid="uid://cy32ibyx4xygq" path="res://menu.gd" id="1_mae5d"]
[ext_resource type="Texture2D" uid="uid://bm7vkehwgu3yc" path="res://content/clips/visibility_graph-0.jpeg" id="1_ouk20"]
[ext_resource type="Texture2D" uid="uid://d366d6omq2lgv" path="res://content/screenshot/center_of_trapezoid.PNG" id="2_mae5d"]
[ext_resource type="Texture2D" uid="uid://bwcmtg8a17spy" path="res://content/screenshot/astar.PNG" id="4_4hy44"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mae5d")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="vg" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/vg"]
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture = ExtResource("1_ouk20")
expand_mode = 2
stretch_mode = 5

[node name="vg_button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/vg"]
layout_mode = 2
size_flags_horizontal = 4
text = "Visibility Graph"

[node name="td" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/td"]
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture = ExtResource("2_mae5d")
expand_mode = 2
stretch_mode = 5

[node name="td_button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/td"]
layout_mode = 2
size_flags_horizontal = 4
text = "Trapezoid Decomposition"

[node name="astar" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/astar"]
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
texture = ExtResource("4_4hy44")
expand_mode = 2
stretch_mode = 5

[node name="astar_button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/astar"]
layout_mode = 2
size_flags_horizontal = 4
text = "A-Star"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/vg/vg_button" to="." method="_on_vg_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/td/td_button" to="." method="_on_td_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/astar/astar_button" to="." method="_on_astar_button_pressed"]
